--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1057,11 +1057,13 @@
                         <h4>Vi som jobbar med Kompisbyrån</h4>
                         <p>
                             Kansli<br> 
-                            Emma Hammar, grundare och verksamhetsledare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
+                            Linda Kaplan, operativ ledare, <a href="mailto:linda@kompisbyran.se ">linda@kompisbyran.se </a><br>
                             Clara Wäppling, projektledare, <a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
+                            Emma Hammar, grundare och verksamhetsledare (föräldraledig), <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
 
                             IT<br>
                             Jon Gotlin, IT-ansvarig<br>
+                            Andreas Lundquist, IT<br>
 
                             Kompisledare<br> 
                             Helena Rewucha, Kompisledare Göteborg<br> 
