--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -978,21 +978,37 @@
                     <![CDATA[
                         <h4>We are Kompisbyrån</h4>
                         <p>
-                            Emma Hammar, grundare och verksamhetsledare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
-                            Clara Wäppling, projektledare<a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
-                            Cecilia Holmgren, grundare<br>
-                            Gabriella Hernqvist, ambassadör matchning<br>
-                            Hanna Magnusson, ambassadör matchning<br>
-                            Hedda Grew, ambassadör Linköping<br>
-                            Helena Rewucha, Kompisledare Göteborg<br>
-                            Helena Wannberg, Kompisledare Örebro<br>
-                            Heydar Sheykhali, ambassadör matchning<br>
-                            Jennifer Silander, ambassadör matchning<br>
-                            Jens Östgaard, Kompisledare Göteborg<br>
-                            Jon Gotlin, IT<br>
-                            Jonas Ouadih, ambassadör Malmö<br>
+                            Office<br> 
+                            Linda Kaplan, operativ ledare, <a href="mailto:linda@kompisbyran.se ">linda@kompisbyran.se </a><br>
+                            Clara Wäppling, projektledare, <a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
+                            Emma Hammar, grundare och verksamhetsledare (föräldraledig), <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
+
+                            IT<br>
+                            Jon Gotlin, IT-ansvarig<br>
+                            Andreas Lundquist, IT<br>
+
+                            Kompisledare<br> 
+                            Helena Rewucha, Kompisledare Göteborg<br> 
                             Robert Thörnqvist, Kompisledare Göteborg<br>
-                            Sofia Winroth, Kompisledare Örebro
+                            Jens Östgaard, Kompisledare Göteborg<br>
+                            Helena Wannberg, Kompisledare Örebro<br> 
+                            Sofia Winroth, Kompisledare Örebro<br>
+                            
+                            Ambassadörer<br>  
+                            Hedda Grew, ambassadör Linköping<br> 
+                            Gabriella Hernqvist, ambassadör matchning<br> 
+                            Cecilia Holmgren, grundare och ambassadör matchning<br> 
+                            Hanna Magnusson, ambassadör matchning<br> 
+                            Jonas Ouadih, ambassadör Malmö<br> 
+                            Heydar Sheykhali, ambassadör matchning<br>  
+                            Jennifer Silander, ambassadör matchning<br> 
+                            Alexander Unge, ambassadör matchning<br> 
+                       
+                            Eventansvariga<br> 
+                            Mari Multamäki, eventansvarig Stockholm<br> 
+                            Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
+                            Maria Waldekranz, eventansvarig Stockholm<br> 
+                            Oliva Wideroth, teamledare eventansvariga Stockholm<br>                             
                         </p>
                     ]]>
                 </target>
