--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1082,7 +1082,7 @@
                             Jennifer Silander, ambassadör matchning<br> 
                             Alexander Unge, ambassadör matchning<br> 
                        
-                            Eventansvariga:
+                            Eventansvariga<br>
                             Mari Multamäki, eventansvarig Stockholm<br> 
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
                             Maria Waldekranz, eventansvarig Stockholm<br> 
