Fix some translations for start friend and add text to orange box

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1154,7 +1154,7 @@
             <trans-unit id="page.start.well">
                 <source>page.start.well</source>
                 <target>
-                    ...
+                    För att bli startkompis måste du bo i någon av dessa kommuner: Nynäshamn, Vaxholm, Österåker, Lidingö, Solna eller Tyresö.
                 </target>
             </trans-unit>
             <trans-unit id="occupation.employed">
