Add Kalmar as a city in static texts

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -496,7 +496,7 @@
                     special demands, it can be more difficult for us to find a good match. Try not to have high expectations 
                     but take it as it comes!
                     
-                    As a Fika friend or Music friend, you meet in 1 of 9 cities where we operate: Göteborg, Jönköping, 
+                    As a Fika friend or Music friend, you meet in 1 of 10 cities where we operate: Göteborg, Jönköping, Kalmar
                     Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås or Örebro. 
                     
                     As a Start friend, you meet in 1 of 5 municipalities in Stockholm county: Lidingö, Nynäshamn, 
@@ -619,8 +619,8 @@
                             music interests and new start friends based on the municipality they both live in. 
                         </li>
                         <li>
-                            As a Fika friend or Music friend, you must be able to meet your new Fika or Music friend in 1 of 9 cities: Göteborg, 
-                            Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås or Örebro. We hope that we can connect new people 
+                            As a Fika friend or Music friend, you must be able to meet your new Fika or Music friend in 1 of 10 cities: Göteborg, 
+                            Jönköping, Kalmar, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås or Örebro. We hope that we can connect new people 
                             in more cities in the future. 
                         </li>
                         <li>
@@ -800,7 +800,7 @@
                     Kompisbyrån is a non-profit organization since 2014. We connect new fika friends with 
                     different backgrounds and experiences but with similar interests. A new and an established 
                     Swede meet to practise Swedish over a “fika”. We want to make integration easy and accessible. 
-                    Today, Kompisbyrån is active in 9 cities, has a dozen active ambassadours, and nearly 10 000 
+                    Today, Kompisbyrån is active in 10 cities, has a dozen active ambassadours, and nearly 10 000 
                     contacts from 126 countries have been mediated.
                 </target>
             </trans-unit>
@@ -961,7 +961,7 @@
                             greater understanding of each other as human beings, and enrich our lives. To name a fraction.
                         </p>
                         <p>
-                            Kompisbyrån operates in 9 cities in Sweden: Göteborg, Jönköping, Linköping, Malmö, Stockholm, 
+                            Kompisbyrån operates in 10 cities in Sweden: Göteborg, Jönköping, Kalmar, Linköping, Malmö, Stockholm, 
                             Umeå, Uppsala, Västerås and Örebro; and 6 municipalities: Lidingö, Nynäshamn, Solna, Tyresö, Vaxholm and Österåker.
                         </p>
                         <p>
@@ -978,23 +978,24 @@
                     <![CDATA[
                         <h4>We are Kompisbyrån</h4>
                         <p>
-                            Office<br> 
-                            Linda Kaplan, operativ ledare, <a href="mailto:linda@kompisbyran.se ">linda@kompisbyran.se </a><br>
-                            Clara Wäppling, projektledare, <a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
-                            Emma Hammar, grundare och verksamhetsledare (föräldraledig), <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
-
-                            IT<br>
+                            <b>Office</b><br> 
+                            Linda Kaplan, operativ ledare, <a href="mailto:linda@kompisbyran.se">linda@kompisbyran.se</a><br>
+                            Clara Wäppling, projektledare, <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
+                            Emma Hammar, grundare och verksamhetsledare (föräldraledig), <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
+                            <br>
+                            <b>IT</b><br>
                             Jon Gotlin, IT-ansvarig<br>
                             Andreas Lundquist, IT<br>
-
-                            Kompisledare<br> 
+                            <br>
+                            <b>Kompisledare</b><br> 
                             Helena Rewucha, Kompisledare Göteborg<br> 
                             Robert Thörnqvist, Kompisledare Göteborg<br>
                             Jens Östgaard, Kompisledare Göteborg<br>
                             Helena Wannberg, Kompisledare Örebro<br> 
                             Sofia Winroth, Kompisledare Örebro<br>
-                            
-                            Ambassadörer<br>  
+                            Nienke Bakker, Kompisledare Kalmar<br>
+                            <br>
+                            <b>Ambassadörer</b><br>  
                             Hedda Grew, ambassadör Linköping<br> 
                             Gabriella Hernqvist, ambassadör matchning<br> 
                             Cecilia Holmgren, grundare och ambassadör matchning<br> 
@@ -1003,8 +1004,8 @@
                             Heydar Sheykhali, ambassadör matchning<br>  
                             Jennifer Silander, ambassadör matchning<br> 
                             Alexander Unge, ambassadör matchning<br> 
-                       
-                            Eventansvariga<br> 
+                            <br>
+                            <b>Eventansvariga</b><br> 
                             Mari Multamäki, eventansvarig Stockholm<br> 
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
                             Maria Waldekranz, eventansvarig Stockholm<br> 
@@ -1020,6 +1021,7 @@
                         <p>
                             Questions about the matching process for Fika or Music friend?<br>
                             Göteborg: <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
+                            Kalmar: <a href="mailto:kalmar@kompisbyran.se">kalmar@kompisbyran.se</a><br>
                             Malmö: <a href="mailto:malmo@kompisbyran.se">malmo@kompisbyran.se</a><br>
                             Stockholm: <a href="mailto:stockholm@kompisbyran.se">stockholm@kompisbyran.se</a><br>                            
                             Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
@@ -1028,7 +1030,7 @@
                             Questions about Start friend (Startkompis)?<br>
                             <a href="mailto:start@kompisbyran.se">start@kompisbyran.se</a><br>
 
-                            Questions about collaborations, recruitment or press, please contact: <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> or <a href="mailto:kontakt@kompisbyran.se ">kontakt@kompisbyran.se </a>
+                            Questions about collaborations, recruitment or press, please contact: <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a> or <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a>
 
                             Questions about events: event@kompisbyran.se
 
