Forgot to add Kalmar to How it works.

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -832,7 +832,7 @@
                             new in Sweden, and one person has lived in Sweden for a long time*. This is what we call a “Friend fika” (Kompisfika).  
                         </p>
                         <p>
-                            You must be able to meet your Fika friend in: Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås or Örebro.
+                            You must be able to meet your Fika friend in: Göteborg, Jönköping, Kalmar, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås or Örebro.
                         </p>
                         <p>
                             How to meet a new Fika friend: 
