--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -900,7 +900,7 @@
                         <p>
                             Träffa en person med liknande intressen på ett kafé i cirka 1 timme, fika och prata svenska. En person är ny i Sverige 
                             och en person har bott i Sverige länge*. Det är det vi kallar för en Kompisfika. Du måste kunna träffas i Göteborg, 
-                            Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås eller Örebro.
+                            Jönköping, Kalmar, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås eller Örebro.
                         </p>
                         <p>
                             <strong>Så här blir du en Fikakompis:</strong>
