--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -389,7 +389,7 @@
             <trans-unit id="user.form.type.start.help">
                 <source>user.form.type.start.help</source>
                 <target>
-                    You will be connected with a person who you meet and go for a walk with to discover the area where you both live. Right now, you can sign up if you live in Lidingö, Nynäshamn, Solna, Tyresö, Vaxholm or Österåker.
+                    You will be connected with a person who you meet and go for a walk with to discover the area where you both live. Right now, you can sign up if you live in %municipalities%.
                 </target>
             </trans-unit>
             <trans-unit id="user.form.facebook">
@@ -499,8 +499,7 @@
                     As a Fika friend or Music friend, you meet in 1 of 10 cities where we operate: Göteborg, Jönköping, Kalmar
                     Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås or Örebro. 
                     
-                    As a Start friend, you meet in 1 of 5 municipalities in Stockholm county: Lidingö, Nynäshamn, 
-                    Solna, Tyresö, Vaxholm or Österåker.
+                    As a Start friend, you meet in one of the following municipalities: %municipalities%.
                 </target>
             </trans-unit>
             <trans-unit id="index.header">
@@ -624,7 +623,7 @@
                             in more cities in the future. 
                         </li>
                         <li>
-                            As a Start friend, you must be able to meet in 1 of 6 municipalities: Lidingö, Nynäshamn, Solna, Tyresö, Vaxholm or Österåker.
+                            As a Start friend, you must be able to meet in one of the following municipalities: %municipalities%.
                         </li>
                         <li>
                             Kompisbyrån is only responsible for linking together people who have lived in Sweden for a short time with people 
@@ -962,7 +961,7 @@
                         </p>
                         <p>
                             Kompisbyrån operates in 10 cities in Sweden: Göteborg, Jönköping, Kalmar, Linköping, Malmö, Stockholm, 
-                            Umeå, Uppsala, Västerås and Örebro; and 6 municipalities: Lidingö, Nynäshamn, Solna, Tyresö, Vaxholm and Österåker.
+                            Umeå, Uppsala, Västerås and Örebro; and these municipalities: %municipalities%.
                         </p>
                         <p>
                             "Many Swedes associate a “fika” with something relaxed and fun, and is often perceived as central 
@@ -1052,7 +1051,7 @@
                         </p>
                         <p>
                             Go for an 1 hour walk together with an established local who has lived in your neighborhood for a long time. You must live in one of these 
-                            municipalities: Lidingö, Nynäshamn, Solna, Tyresö, Vaxholm or Österåker.
+                            municipalities: %municipalities%.
                         </p>
                         <p>
                             <strong>How to sign up for a Start friend:</strong>
@@ -1080,7 +1079,7 @@
             <trans-unit id="page.start.well">
                 <source>page.start.well</source>
                 <target>
-                    To become start friends you need to live in one of these municipalities: Nynäshamn, Vaxholm, Österåker, Lidingö, Solna or Tyresö.
+                    To become start friends you need to live in one of these municipalities: %municipalities%.
                 </target>
             </trans-unit>
             <trans-unit id="occupation.employed">
