Dynamic municipality list in terms

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -620,7 +620,7 @@
                             städer i framtiden.
                         </li>
                         <li>
-                            Som Startkompis måste du kunna träffas i kommunerna Lidingö, Nynäshamn, Solna, Tyresö, Vaxholm eller Österåker.
+                            Som Startkompis måste du kunna träffas i kommunerna %municipalities%.
                         </li>
                         <li>
                             Kompisbyrån ansvarar endast för att länka samman personer som har bott i Sverige under kortare tid med 
