Kompis sverige part in terms

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -623,6 +623,9 @@
                             Som Startkompis måste du kunna träffas i kommunerna %municipalities%.
                         </li>
                         <li>
+                            Till dig som skickar in en förfrågan om att bli startkompis i någon av följande Skånekommuner: Båstad, Kristianstad, Perstorp, Svedala och Ängelholm. Startkompis i Skåne möjliggörs i samarbete med Kompis Sverige, en snarlik ideell organisation med samma värdegrund som Kompisbyrån. Genom att godkänna Kompisbyråns villkor godkänner du att personer från Kompis Sverige kan komma att kontakta dig via telefon eller mail med info relaterad till din Startkompis-anmälan samt frågan om att delta i Kompis Sveriges eget kompisprogram.
+                        </li>
+                        <li>
                             Kompisbyrån ansvarar endast för att länka samman personer som har bott i Sverige under kortare tid med 
                             personer som har bott i Sverige länge. 
                         </li>
